Discord Server link updated
Discord Server link updated

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                         <li><a href="https://twitter.com/KaranKhandekar2"><i class="fab fa-twitter"></i></a></li>
                         <li><a href="https://karankhandekar.github.io"><i class="fab fa-github"></i></a></li>
                         <li><a href="https://www.youtube.com/@KaranKhandekar"><i class="fab fa-youtube"></i></a></li>
-                        <li><a href="https://discord.gg/3B6rHKvV8H"><i class="fab fa-discord"></i></a></li>
+                        <li><a href="https://discord.gg/d4kFGjgKCH"><i class="fab fa-discord"></i></a></li>
 
 
                       </ul>
