Split Img Pro 3 Updated
Split Img Pro 3 Updated

--- a/splitImg.html
+++ b/splitImg.html
@@ -4,16 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>SplitImg 2 by Karan Khandekar | Creative Manager & Software Developer</title>
+  <title>SplitImg by Karan Khandekar | Creative Manager & Software Developer</title>
   <meta name="description" content="Welcome to Karan Khandekar's portfolio – Creative Manager, Software Developer, and Entrepreneur. Explore my work in design, coding, and innovation.">
-  <script type="application/ld+json">
-    {
-        "@context": "http://schema.org",
-        "@type": "WebSite",
-        "name": "Karan Khandekar",
-        "url": "https://karankhandekar.github.io"
-    }
-</script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.svg">
@@ -248,9 +240,9 @@
                         <li><a href="https://www.instagram.com/karankhandekar/"><i class="fab fa-instagram"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/karan-khandekar/"><i class="fab fa-linkedin"></i></a></li>
                         <li><a href="https://twitter.com/KaranKhandekar2"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="https://karankhandekar.github.io"><i class="fab fa-github"></i></a></li>
+                        <li><a href="https://karankhandekar.github.io/"><i class="fab fa-github"></i></a></li>
                         <li><a href="https://www.youtube.com/@KaranKhandekar"><i class="fab fa-youtube"></i></a></li>
-                        <li><a href="https://discord.gg/d4kFGjgKCH"><i class="fab fa-discord"></i></a></li>
+                        <li><a href="https://discord.gg/3B6rHKvV8H"><i class="fab fa-discord"></i></a></li>
                       </ul>
                     </div>
                   </div>
@@ -262,15 +254,15 @@
                 <div class="card-body portfolio-card article-details-card">
                   <div class="article-details-area">
                     <div class="main-image">
-                      <img src="assets/img/blog/splitImg.jpeg" alt="SplitImg" class="img-fluid w-100">
+                      <img src="assets/img/blog/splitImg.jpg" alt="SplitImg" class="img-fluid w-100">
                     </div>
                     <ul class="list-unstyled article-tags">
                       <li>Free Tool</li>
-                      <li>Jan 31, 2025</li>
+                      <li>Apr 23, 2025</li>
                       <li>Developed for Saks Global</li>
                     </ul>
                     <div class="article-details-text">
-                      <h3 class="main-title">Split Image 2</h3>
+                      <h3 class="main-title">Split Image Pro 3</h3>
                       <blockquote>
                         <p>
                           " SplitImg for Designers is a utility application developed for Saks Global. This tool automates the process of organizing, tagging, 
@@ -278,10 +270,6 @@
                           splitting images into designated folders for each designer. "
                         </p>
                       </blockquote>
-                      <div class="text-center">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/AYhe9qclezo?si=hSA1FEF2CypZpESJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                      </div>
-                      
                       
                       <h3 class="main-title inner-title">Developer Information</h3>
                       <p>This tool was developed by Karan Khandekar, specifically for Saks Global. It aims to streamline the workflow for designers working on image-based tasks by automating the organization and tagging process.
