Split Img Pro 3 Updated
Split Img Pro 3 Updated

--- a/index.html
+++ b/index.html
@@ -510,8 +510,8 @@
                       <div class="col-lg-12">
                         <div class="project-item">
                           <div class="image">
-                            <img src="assets/img/blog/splitImg.jpeg" alt="SplitImg" class="img-fluid w-100">
-                            <a href="assets/img/blog/splitImg.jpeg"
+                            <img src="assets/img/blog/splitImg.jpg" alt="SplitImg" class="img-fluid w-100">
+                            <a href="assets/img/blog/splitImg.jpg"
                               class="gallery-popup full-image-preview parent-container">
                               <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="none"
                                 stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
