--- a/todo-try-now.html
+++ b/todo-try-now.html
@@ -359,7 +359,7 @@
                             <div class="article-publications-item">
                               <div class="image">
                                 <a href="splitImg.html" class="d-block w-100">
-                                  <img src="assets/img/blog/splitImg.jpeg" alt="splitImg" class="img-fluid w-100">
+                                  <img src="assets/img/blog/splitImg.jpg" alt="splitImg" class="img-fluid w-100">
                                 </a>
                                 <a href="splitImg.html" class="tags">Development</a>
                               </div>
