--- a/tools-tech.html
+++ b/tools-tech.html
@@ -289,7 +289,7 @@
                           <div class="article-publications-item">
                             <div class="image">
                               <a href="splitImg.html" class="d-block w-100">
-                                <img src="assets/img/blog/splitImg.jpeg" alt="SplitImg" class="img-fluid w-100">
+                                <img src="assets/img/blog/splitImg.jpg" alt="SplitImg" class="img-fluid w-100">
                               </a>
                               <a href="splitImg.html" class="tags">Saks Global</a>
                             </div>
