--- a/about.html
+++ b/about.html
@@ -626,7 +626,7 @@
                           <div class="article-publications-item">
                             <div class="image">
                               <a href="splitImg.html" class="d-block w-100">
-                                <img src="assets/img/blog/splitImg.jpeg" alt="SpliImg" class="img-fluid w-100">
+                                <img src="assets/img/blog/splitImg.jpg" alt="SpliImg" class="img-fluid w-100">
                               </a>
                               <a href="splitImg.html" class="tags">Development</a>
                             </div>
