Excel Reader added
Excel Reader added

--- a/tools-tech.html
+++ b/tools-tech.html
@@ -312,8 +312,7 @@
                               <a href="todo-try-now.html" class="tags">Development</a>
                             </div>
                             <div class="text">
-                              <a href="todo-try-now.html" class="title">Want To Upgrade Your Brain? Stop Doing These 7
-                                Things</a>
+                              <a href="todo-try-now.html" class="title">WNo Database todo-lits.</a>
                               <ul class="list-unstyled">
                                 <li>Free Tool</li>
                                 <li>Nov 28, 2024</li>
@@ -321,16 +320,16 @@
                             </div>
                           </div>
                         </div>
-                        <!-- <div class="col-xl-6 col-lg-4 col-md-6">
+                        <div class="col-xl-6 col-lg-4 col-md-6">
                           <div class="article-publications-item">
                             <div class="image">
-                              <a href="article.html" class="d-block w-100">
-                                <img src="assets/img/blog/blog-img-4.jpg" alt="blog-img-4" class="img-fluid w-100">
+                              <a href="excel-reader/index.html" class="d-block w-100">
+                                <img src="assets/img/blog/excel-reader.jpg" alt="blog-img-4" class="img-fluid w-100">
                               </a>
-                              <a href="article.html" class="tags">Development</a>
+                              <a href="excel-reader/index.html" class="tags">Development</a>
                             </div>
                             <div class="text">
-                              <a href="article.html" class="title">Want To Upgrade Your Brain? Stop Doing These 7
+                              <a href="excel-reader/index.html" class="title">Want To Upgrade Your Brain? Stop Doing These 7
                                 Things</a>
                               <ul class="list-unstyled">
                                 <li>15 min read</li>
@@ -338,7 +337,7 @@
                               </ul>
                             </div>
                           </div>
-                        </div> -->
+                        </div>
                         <!-- <div class="col-xl-6 col-lg-4 col-md-6">
                           <div class="article-publications-item">
                             <div class="image">
