--- a/tools-tech.html
+++ b/tools-tech.html
@@ -312,7 +312,7 @@
                               <a href="todo-try-now.html" class="tags">Development</a>
                             </div>
                             <div class="text">
-                              <a href="todo-try-now.html" class="title">WNo Database todo-lits.</a>
+                              <a href="todo-try-now.html" class="title">No Database todo-lits.</a>
                               <ul class="list-unstyled">
                                 <li>Free Tool</li>
                                 <li>Nov 28, 2024</li>
@@ -323,17 +323,16 @@
                         <div class="col-xl-6 col-lg-4 col-md-6">
                           <div class="article-publications-item">
                             <div class="image">
-                              <a href="excel-reader/index.html" class="d-block w-100">
+                              <a href="CodeSheet/index.html" class="d-block w-100">
                                 <img src="assets/img/blog/excel-reader.jpg" alt="blog-img-4" class="img-fluid w-100">
                               </a>
-                              <a href="excel-reader/index.html" class="tags">Development</a>
+                              <a href="excel-reader/index.html" class="tags">CodeSheet</a>
                             </div>
                             <div class="text">
-                              <a href="excel-reader/index.html" class="title">Want To Upgrade Your Brain? Stop Doing These 7
-                                Things</a>
+                              <a href="excel-reader/index.html" class="title">Instantly turn Excel HTML snippets into live, rendered web previews.</a>
                               <ul class="list-unstyled">
-                                <li>15 min read</li>
-                                <li>Nov 6, 2023</li>
+                                <li>Free Toll</li>
+                                <li>Oct 8, 2025</li>
                               </ul>
                             </div>
                           </div>
