--- a/tools-tech.html
+++ b/tools-tech.html
@@ -326,10 +326,10 @@
                               <a href="CodeSheet/index.html" class="d-block w-100">
                                 <img src="assets/img/blog/excel-reader.jpg" alt="blog-img-4" class="img-fluid w-100">
                               </a>
-                              <a href="excel-reader/index.html" class="tags">CodeSheet</a>
+                              <a href="eCodeSheet/index.html" class="tags">CodeSheet</a>
                             </div>
                             <div class="text">
-                              <a href="excel-reader/index.html" class="title">Instantly turn Excel HTML snippets into live, rendered web previews.</a>
+                              <a href="eCodeSheet/index.html" class="title">Instantly turn Excel HTML snippets into live, rendered web previews.</a>
                               <ul class="list-unstyled">
                                 <li>Free Toll</li>
                                 <li>Oct 8, 2025</li>
