--- a/tools-tech.html
+++ b/tools-tech.html
@@ -214,7 +214,7 @@
                     <h3 class="card-title">Karan Khandekar 👋</h3>
                     <p>Hi, I’m Karan (Kenny), a Creative Manager with 10+ years of experience in motion design, marketing, and innovation. With a knack for blending creativity and technology.</p>
                     <div class="common-button-groups">
-                      <a class="btn btn-call" href="https://lynko.in/karankhandekar" target="_blank">
+                      <a class="btn btn-call" href="https://linktr.ee/karankhandekar" target="_blank">
                         <svg class="icon" width="24" height="24" viewBox="0 0 24 24" fill="none"
                           xmlns="http://www.w3.org/2000/svg">
                           <path
